@startuml
skinparam classAttributeIconSize 0

database Database {
}

package "UI" #DDDDDD {
class RegisterDroneUI{
}
}

package "Controller" #DDDDDD {
class RegisterDroneController{
+getPharmacies()
+newDrone(batteryPerc, chargingStatus, potency, weight, batteryCapacity, maxPayload, pharmacy)
+registerDrone(drone)
}
}


package "Model" #DDDDDD {
 package "Service" #DDDDDD {
  class PharmacyService{
      +PharmacyService()
      +getPharmacies()
  }

  class DroneService{
      +DroneService()
      +registerDrone(drone)
   }
}

package "Model" #DDDDDD {
class DronePark{
-   int maxSlotsNumber
}

class DroneChargingSlot{
-   int id
-   float outputPower
}

class DroneParkingSlot{
-   int id
}

class Drone{
  +Drone(batteryPerc, charginStatus, potency,\n weight, batteryCapacity, maxPayload, batteryVoltage, pharmacy)
}

class Vehicle{
  -int id
  -String vehicleType
  -float potency
  -float weight
  -float maxPayload
  -String charngingStatus
}

class Battery{
  -int id
  -float batteryPerc
  -int batteryCapacity
  -float batteryVoltage
}

class Address{
  -double longitude
  -double latitude
  -String doorNumber
  -String streetName
  -String postalCode
  -String locality
  -String country
}

class Pharmacy {
  -int id
  -String name
-   String email
}
}


package "Data" #DDDDDD {
class DataHandler{
    +openConnection()
    +closeAll()
}
class PharmacyDB{
     +PharmacyDB()
     +getPharmacies()
 }

 class DroneDB{
     +DroneDB()
     +registerDrone(drone)
  }
}

class PharmacyDB extends DataHandler
class DroneDB extends DataHandler

RegisterDroneUI ..> RegisterDroneController
RegisterDroneController ..> PharmacyService
RegisterDroneController ..> DroneService
Database "1" --> "1" PharmacyDB : manages
Database "1" --> "1" DroneDB : manages
DroneService "1" --> "*" PharmacyDB : uses
DroneService "1" --> "*" DroneDB : uses
PharmacyService "1" --> "*" Pharmacy : manage services of
DroneService "1" --> "*" Drone : manage services of

Database "1" -- "*" Pharmacy : has registered >
Database "1" -- "*" Drone : has registered >

Vehicle "1" -- "1" Battery : has >
Drone "*" -- "1" Vehicle : is a type of >
Vehicle "*" -- "1" Pharmacy : belongs to >
Pharmacy "1" -- "1" Address : has >
Pharmacy "1" -- "1" DronePark : has >
DronePark "1" -- "1" DroneChargingSlot : has >
DronePark "1" -- "1" DroneParkingSlot : has >

@enduml